[package]
name = "img_caster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
socket2 = "0.4"
tokio = { version = "1", features = ["full"] }
windows = "0.48"
windows-drives = "0.5"
derivative = "2.2.0"
nom = "7.1.3"