[package]
name = "img_caster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
socket2 = "0.4"
tokio = { version = "1", features = ["full"] }
windows = "0.48"
windows-drives = "0.5"
derivative = "2.2.0"
nom = "7.1.3"
endian_codec = "0.1.1"
device_query = "0.1.0"
winapi = "0.3.9"
winit = "0.28"
crossterm = "0.25"
log = "0.4"
simplelog = "0.12"
encoding-next = "0.3"
default-net = "0.17"
system-info = "0.1.2"
ipnet = "2.8"
byte-unit = "4.0.19"
clap = { version = "4.3.21", features = ["derive"] }
csv = "1.2"
plotly = { version = ">=0.8.0", features = ["plotly_ndarray"] }
ndarray = "0.15"
chrono = "0.4"
plotters = "0.3.5"
