[package]
name = "img_caster"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
ipnet = "2.8.0"
winapi = "0.3.9"
windows-drives = "0.5"
endian_codec = "0.1.1"
crossterm = "0.25"
socket2 = "0.4"
byte-unit = "4.0.19"
log = "0.4"
simplelog = "0.12"
default-net = "0.17"
plotly = { version = ">=0.8.0", features = ["plotly_ndarray"] }
plotters = "0.3.5"
ndarray = "0.15"
